manifest/ingress-nginx-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe-ingress
  annotations:
    nginx.ingress.kubernetes.io/client-max-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 30s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 30s
spec:
  ingressClassName: nginx
  rules:
    - host: ae258e0c03c874901a08b5213019c1db-e31989996681e50b.elb.ap-south-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tic-tac-toe-service
                port:
                  number: 80
